--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   intl: ^0.19.0
+  easy_image_viewer: ^1.5.1
 
 dev_dependencies:
   flutter_test:
